[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/level_africa/UserInterface/CoinsCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/level_africa/UserInterface/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/common/Main/Game.gd" type="Script" id=3]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 3 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 2 )]

[node name="CoinsCounter" parent="InterfaceLayer" instance=ExtResource( 1 )]
margin_right = 105.0
margin_bottom = 50.0
